fixed text-align so that only business description is justifed and rest is right aligned as well as fixing iPad view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,10 @@ body {
 .light-theme {
   background-color: #ffffff;
   color: #212121;
+  text-align: left-aligned;
+}
+
+.body {
   text-align: justify;
   text-justify: inter-word;
 }
